--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -9,6 +9,33 @@
       "name": "КиноОнлайн",
       "path": "",
       "files": {
+        "43545033": {
+          "id": "43545033",
+          "path": "dev/css/global/global.css",
+          "output": "dev/css/global/global-dist.css",
+          "name": "global.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "78704274": {
+          "id": "78704274",
+          "path": "dev/html/global/threeBlock.html",
+          "output": "dev/html/global/threeBlock.html",
+          "name": "threeBlock.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
         "eb0c839c": {
           "id": "eb0c839c",
           "path": "build/index.html",
@@ -127,7 +154,9 @@
           "imported": true,
           "parents": [
             "a11c4966",
-            "d9284651"
+            "d9284651",
+            "c4fce64c",
+            "626aaee0"
           ],
           "type": "jade"
         },
@@ -247,21 +276,6 @@
           "parents": [],
           "type": "html"
         },
-        "5f986822": {
-          "id": "5f986822",
-          "path": "dev/jade/index/new.jade",
-          "output": "dev/html/index/new.html",
-          "name": "new.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "a11c4966"
-          ],
-          "type": "jade"
-        },
         "7d1634fa": {
           "id": "7d1634fa",
           "path": "dev/html/index/new.html",
@@ -290,7 +304,7 @@
           "output": "dev/css/global/footer.css",
           "name": "footer.sass",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -298,11 +312,8 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "c926a60c",
-            "717bccb9"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "05b3c0c4": {
@@ -333,7 +344,9 @@
           "imported": true,
           "parents": [
             "a11c4966",
-            "d9284651"
+            "d9284651",
+            "c4fce64c",
+            "626aaee0"
           ],
           "type": "jade"
         },
@@ -417,19 +430,6 @@
           "parents": [],
           "type": "css"
         },
-        "93a2226b": {
-          "id": "93a2226b",
-          "path": "dev/jade/video/like.jade",
-          "output": "dev/html/video/like.html",
-          "name": "like.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
-        },
         "cd8c0e26": {
           "id": "cd8c0e26",
           "path": "dev/html/video/like.html",
@@ -440,61 +440,6 @@
           "imported": false,
           "parents": [],
           "type": "html"
-        },
-        "8f4abbaf": {
-          "id": "8f4abbaf",
-          "path": "dev/sass/video/like.sass",
-          "output": "dev/css/video/like.css",
-          "name": "like.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "717bccb9"
-          ],
-          "type": "sass"
-        },
-        "b6b48e2c": {
-          "id": "b6b48e2c",
-          "path": "dev/sass/video/last.sass",
-          "output": "dev/css/video/last.css",
-          "name": "last.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "717bccb9"
-          ],
-          "type": "sass"
-        },
-        "cd6cc7ab": {
-          "id": "cd6cc7ab",
-          "path": "dev/jade/video/last.jade",
-          "output": "dev/html/video/last.html",
-          "name": "last.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d9284651"
-          ],
-          "type": "jade"
         },
         "fee060d0": {
           "id": "fee060d0",
@@ -507,19 +452,6 @@
           "parents": [],
           "type": "html"
         },
-        "6a3b4895": {
-          "id": "6a3b4895",
-          "path": "dev/jade/video/recommendedToYou.jade",
-          "output": "dev/html/video/recommendedToYou.html",
-          "name": "recommendedToYou.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
-        },
         "4a7cb542": {
           "id": "4a7cb542",
           "path": "dev/html/video/recommendedToYou.html",
@@ -531,34 +463,14 @@
           "parents": [],
           "type": "html"
         },
-        "380ffd83": {
-          "id": "380ffd83",
-          "path": "dev/sass/video/recommendedToYou.sass",
-          "output": "dev/css/video/recommendedToYou.css",
-          "name": "recommendedToYou.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "717bccb9"
-          ],
-          "type": "sass"
-        },
         "7b24e0ba": {
           "id": "7b24e0ba",
           "path": "dev/sass/global/global.sass",
           "output": "dev/css/global/global.css",
           "name": "global.sass",
           "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
+          "autoCompile": true,
+          "autoprefixer": true,
           "sourceMaps": false,
           "libSass": true,
           "compass": false,
@@ -570,7 +482,8 @@
             "c926a60c",
             "717bccb9"
           ],
-          "type": "sass"
+          "type": "sass",
+          "forceImportAutoCompile": true
         },
         "0adae7c2": {
           "id": "0adae7c2",
@@ -584,7 +497,9 @@
           "imported": true,
           "parents": [
             "a11c4966",
-            "d9284651"
+            "d9284651",
+            "c4fce64c",
+            "626aaee0"
           ],
           "type": "jade"
         },
@@ -599,11 +514,28 @@
           "parents": [],
           "type": "html"
         },
-        "7d0b4436": {
-          "id": "7d0b4436",
-          "path": "dev/sass/index/new.sass",
-          "output": "dev/css/index/new.css",
-          "name": "new.sass",
+        "c810695a": {
+          "id": "c810695a",
+          "path": "dev/jade/global/threeBlock.jade",
+          "output": "dev/html/global/threeBlock.html",
+          "name": "threeBlock.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "a11c4966",
+            "d9284651",
+            "c4fce64c"
+          ],
+          "type": "jade"
+        },
+        "e5658e19": {
+          "id": "e5658e19",
+          "path": "dev/sass/video/video.sass",
+          "output": "dev/css/video/video.css",
+          "name": "video.sass",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
@@ -615,9 +547,105 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c926a60c"
+            "717bccb9"
           ],
           "type": "sass"
+        },
+        "c4fce64c": {
+          "id": "c4fce64c",
+          "path": "dev/jade/all.jade",
+          "output": "build/all.html",
+          "name": "all.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "875f9ceb": {
+          "id": "875f9ceb",
+          "path": "dev/html/all.html",
+          "output": "dev/html/all.html",
+          "name": "all.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "137f9172": {
+          "id": "137f9172",
+          "path": "build/all.html",
+          "output": "build/all.html",
+          "name": "all.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e5ac2aa7": {
+          "id": "e5ac2aa7",
+          "path": "dev/jade/video/video.jade",
+          "output": "dev/html/video/video.html",
+          "name": "video.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d9284651"
+          ],
+          "type": "jade"
+        },
+        "1dea6e87": {
+          "id": "1dea6e87",
+          "path": "dev/html/video/video.html",
+          "output": "dev/html/video/video.html",
+          "name": "video.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "626aaee0": {
+          "id": "626aaee0",
+          "path": "dev/jade/viewer.jade",
+          "output": "build/viewer.html",
+          "name": "viewer.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "dce934df": {
+          "id": "dce934df",
+          "path": "dev/html/viewer.html",
+          "output": "dev/html/viewer.html",
+          "name": "viewer.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1a765d9e": {
+          "id": "1a765d9e",
+          "path": "build/viewer.html",
+          "output": "build/viewer.html",
+          "name": "viewer.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
