--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -122,7 +122,8 @@
           "imported": true,
           "parents": [
             "c926a60c",
-            "717bccb9"
+            "717bccb9",
+            "c8717d9a"
           ],
           "type": "sass"
         },
@@ -480,7 +481,8 @@
           "imported": true,
           "parents": [
             "c926a60c",
-            "717bccb9"
+            "717bccb9",
+            "c8717d9a"
           ],
           "type": "sass",
           "forceImportAutoCompile": true
@@ -646,6 +648,71 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "aa08d4a7": {
+          "id": "aa08d4a7",
+          "path": "dev/jade/viewer/tag.jade",
+          "output": "dev/html/viewer/tag.html",
+          "name": "tag.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "626aaee0"
+          ],
+          "type": "jade"
+        },
+        "c8717d9a": {
+          "id": "c8717d9a",
+          "path": "dev/sass/viewer.sass",
+          "output": "build/css/viewer.css",
+          "name": "viewer.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "5b04c0c7": {
+          "id": "5b04c0c7",
+          "path": "dev/css/viewer.css",
+          "output": "dev/css/viewer-dist.css",
+          "name": "viewer.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "258c1dfe": {
+          "id": "258c1dfe",
+          "path": "build/css/viewer.css",
+          "output": "build/css/viewer-dist.css",
+          "name": "viewer.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
